--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/tota11y.min.js"></script>
     <script src="js/scripts.js"></script>
+   
 
 </head>
 <body>
-    
+     
+    <p class="base" id="text"></p>
+    <p></p>
+
 </body>
 </html>
