--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 </head>
 <body>
-     
+    <h1> Pokedex app</h1>
+    <div></div>
     <p class="base" id="text"></p>
     <p></p>
 
+ 
+ 
 </body>
 </html>
