--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="css/normalise.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/tota11y.min.js"></script>
-    <script src="js/scripts.js"></script>
    
 
 </head>
@@ -16,7 +15,8 @@
     <h1> Pokedex app</h1>
     <div></div>
     <p class="base" id="text"></p>
-    <p></p>
+    <script src="js/scripts.js"></script>
+    <p class="biggie"></p>
 
  
  
