Repository in function with foreacht
Repository is now in a function.
Data can be reached only from functions.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1> Pokedex app</h1>
     <div></div>
     <p class="base" id="text"></p>
-    <script src="js/scripts.js"></script>
-    <p class="biggie"></p>
-
- 
- 
+    <script src="js/scriptsv2.js"></script>
+    <p class="biggies"></p>
+    <script src="js/CF1_5_functions2 for each 2nd.js"> </script> 
+    <div id="container"> </div>
+    <div id="container">This is a text from html document not from script</div>
 </body>
 </html>
