--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" type="text/css" href="css/normalise.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/tota11y.min.js"></script>
-   
+
 
 </head>
 <body>
-    <h1> Pokedex app</h1>
-    <div></div>
-    <p class="base" id="text"></p>
-    <script src="js/scriptsv2.js"></script>
-    <p class="biggies"></p>
-    <script src="js/CF1_5_functions2 for each 2nd.js"> </script> 
-    <div id="container"> </div>
-    <div id="container">This is a text from html document not from script</div>
+   
+ 
+    <h1> Pokedex app</h1>   
+    <h1>pokedex</h1>
+    <ul class="pokemon-list"></ul>
+    <script src="js/scriptsv2.js "  ></script>
+    <div id="container">This is a text from html document not</div>
+
+    
+  
 </body>
 </html>
