--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/normalise.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/polyfill.js"></script>
+    <script src="js/fetch.umd.js"></script>
     <script src="js/tota11y.min.js"></script>
-
-
 </head>
 <body>
    
@@ -19,8 +19,6 @@
     <ul class="pokemon-list"></ul>
     <script src="js/scriptsv2.js "  ></script>
     <div id="container">This is a text from html document not</div>
-
-    
-  
+ 
 </body>
 </html>
