--- a/modaltest.html
+++ b/modaltest.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <button id='show-modal'>
+      Show modal
+    </button>
 
-    <link rel="stylesheet" type="text/css" href="css/normalise.css">
-    <link rel="stylesheet" type="text/css" href="css/modal.css">
-    <script src="js/tota11y.min.js"></script>
+    <button id='show-dialog'>
+      Show dialog
+    </button>
 
-</head> 
-<body>
-    
 
-        <button id='show-modal'>Show modal</button>
-        <button id='show-dialog'>Show dialog</button>
-        <div id='modal-container'></div>
-        <script src="js/modal.js"></script>
-
-</body>
+    <div id='modal-container'></div>
+    <script src="js/modal.js"></script>
+  </body>
 </html>
